@@ -11,7 +11,6 @@ import androidx.annotation.MainThread;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
-import androidx.appcompat.app.AlertDialog;
 
 import com.annimon.stream.Stream;
 import com.google.android.material.dialog.MaterialAlertDialogBuilder;
@@ -26,16 +25,19 @@ import org.thoughtcrime.securesms.components.emoji.EmojiStrings;
 import org.thoughtcrime.securesms.contactshare.Contact.Email;
 import org.thoughtcrime.securesms.contactshare.Contact.Phone;
 import org.thoughtcrime.securesms.contactshare.Contact.PostalAddress;
+import org.thoughtcrime.securesms.database.SignalDatabase;
 import org.thoughtcrime.securesms.mms.PartAuthority;
-import org.thoughtcrime.securesms.phonenumbers.PhoneNumberFormatter;
+import org.thoughtcrime.securesms.profiles.ProfileName;
 import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientId;
+import org.thoughtcrime.securesms.util.SignalE164Util;
 import org.thoughtcrime.securesms.util.SpanUtil;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
+import java.util.stream.Collectors;
 
 public final class ContactUtil {
 
@@ -64,8 +66,12 @@ public final class ContactUtil {
       return "";
     }
 
-    if (!TextUtils.isEmpty(contact.getName().getDisplayName())) {
-      return contact.getName().getDisplayName();
+    if (!TextUtils.isEmpty(contact.getName().getNickname())) {
+      return contact.getName().getNickname();
+    }
+
+    if (!TextUtils.isEmpty(contact.getName().getGivenName()) || !TextUtils.isEmpty(contact.getName().getFamilyName())) {
+      return ProfileName.fromParts(contact.getName().getGivenName(), contact.getName().getFamilyName()).toString();
     }
 
     if (!TextUtils.isEmpty(contact.getOrganization())) {
@@ -114,8 +120,8 @@ public final class ContactUtil {
     }
   }
 
-  public static @NonNull String getNormalizedPhoneNumber(@NonNull Context context, @Nullable String number) {
-    return PhoneNumberFormatter.get(context).format(number);
+  public static @Nullable String getNormalizedPhoneNumber(@Nullable String number) {
+    return SignalE164Util.formatAsE164(number != null ? number : "");
   }
 
   @MainThread
@@ -136,8 +142,14 @@ public final class ContactUtil {
     }
   }
 
-  public static List<RecipientId> getRecipients(@NonNull Context context, @NonNull Contact contact) {
-    return Stream.of(contact.getPhoneNumbers()).map(phone -> Recipient.external(context, phone.getNumber())).map(Recipient::getId).toList();
+  public static List<RecipientId> getRecipients(@NonNull Contact contact) {
+    return contact
+        .getPhoneNumbers()
+        .stream()
+        .map(phone -> SignalE164Util.formatAsE164(phone.getNumber()))
+        .filter(number -> number != null)
+        .map(phone -> SignalDatabase.recipients().getOrInsertFromE164(phone))
+        .collect(Collectors.toList());
   }
 
   @WorkerThread
@@ -145,8 +157,11 @@ public final class ContactUtil {
     Intent intent = new Intent(Intent.ACTION_INSERT_OR_EDIT);
     intent.setType(ContactsContract.Contacts.CONTENT_ITEM_TYPE);
 
-    if (!TextUtils.isEmpty(contact.getName().getDisplayName())) {
-      intent.putExtra(ContactsContract.Intents.Insert.NAME, contact.getName().getDisplayName());
+    if (!TextUtils.isEmpty(contact.getName().getNickname())) {
+      intent.putExtra(ContactsContract.Intents.Insert.NAME, contact.getName().getNickname());
+    } else if (!TextUtils.isEmpty(contact.getName().getGivenName())) {
+      String displayName = ProfileName.fromParts(contact.getName().getGivenName(), contact.getName().getFamilyName()).toString();
+      intent.putExtra(ContactsContract.Intents.Insert.NAME, displayName);
     }
 
     if (!TextUtils.isEmpty(contact.getOrganization())) {
