@@ -15,16 +15,16 @@ import org.thoughtcrime.securesms.database.RecipientTable.RegisteredState;
 import org.thoughtcrime.securesms.database.SignalDatabase;
 import org.thoughtcrime.securesms.database.ThreadTable;
 import org.thoughtcrime.securesms.database.model.GroupRecord;
-import org.thoughtcrime.securesms.dependencies.ApplicationDependencies;
+import org.thoughtcrime.securesms.dependencies.AppDependencies;
 import org.thoughtcrime.securesms.groups.GroupChangeBusyException;
 import org.thoughtcrime.securesms.groups.GroupChangeException;
 import org.thoughtcrime.securesms.groups.GroupChangeFailedException;
 import org.thoughtcrime.securesms.groups.GroupManager;
 import org.thoughtcrime.securesms.jobs.MultiDeviceBlockedUpdateJob;
-import org.thoughtcrime.securesms.jobs.MultiDeviceMessageRequestResponseJob;
 import org.thoughtcrime.securesms.jobs.RefreshOwnProfileJob;
 import org.thoughtcrime.securesms.jobs.RotateProfileKeyJob;
 import org.thoughtcrime.securesms.keyvalue.SignalStore;
+import org.thoughtcrime.securesms.mms.MmsException;
 import org.thoughtcrime.securesms.mms.OutgoingMessage;
 import org.thoughtcrime.securesms.sms.MessageSender;
 import org.thoughtcrime.securesms.storage.StorageSyncHelper;
@@ -36,6 +36,8 @@ import java.io.IOException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 public class RecipientUtil {
 
@@ -74,17 +76,11 @@ public class RecipientUtil {
       Log.i(TAG, "Successfully performed a UUID fetch for " + recipient.getId() + ". Registered: " + state);
     }
 
-    if (recipient.hasServiceId()) {
+    if (recipient.getHasServiceId()) {
       return new SignalServiceAddress(recipient.requireServiceId(), Optional.ofNullable(recipient.resolve().getE164().orElse(null)));
     } else {
       throw new NotFoundException(recipient.getId() + " is not registered!");
     }
-  }
-
-  public static @NonNull List<SignalServiceAddress> toSignalServiceAddresses(@NonNull Context context, @NonNull List<RecipientId> recipients)
-      throws IOException
-  {
-    return toSignalServiceAddressesFromResolved(context, Recipient.resolvedList(recipients));
   }
 
   public static @NonNull List<SignalServiceAddress> toSignalServiceAddressesFromResolved(@NonNull Context context, @NonNull List<Recipient> recipients)
@@ -92,10 +88,16 @@ public class RecipientUtil {
   {
     ensureUuidsAreAvailable(context, recipients);
 
-    return Stream.of(recipients)
-                 .map(Recipient::resolve)
-                 .map(r -> new SignalServiceAddress(r.requireServiceId(), r.getE164().orElse(null)))
-                 .toList();
+    List<Recipient> latestRecipients = recipients.stream().map(it -> it.live().resolve()).collect(Collectors.toList());
+
+    if (latestRecipients.stream().anyMatch(it -> !it.getHasServiceId())) {
+      throw new NotFoundException("1 or more recipients are not registered!");
+    }
+
+    return latestRecipients
+        .stream()
+        .map(r -> new SignalServiceAddress(r.requireServiceId(), r.getE164().orElse(null)))
+        .collect(Collectors.toList());
   }
 
   /**
@@ -106,13 +108,13 @@ public class RecipientUtil {
   {
     List<Recipient> recipientsWithoutUuids = Stream.of(recipients)
                                                    .map(Recipient::resolve)
-                                                   .filterNot(Recipient::hasServiceId)
+                                                   .filterNot(Recipient::getHasServiceId)
                                                    .toList();
 
     if (recipientsWithoutUuids.size() > 0) {
       ContactDiscovery.refresh(context, recipientsWithoutUuids, false);
 
-      if (recipients.stream().map(Recipient::resolve).anyMatch(Recipient::isUnregistered)) {
+      if (recipients.stream().map(Recipient::resolve).anyMatch(it -> it.isUnregistered() || !it.getHasServiceId())) {
         throw new NotFoundException("1 or more recipients are not registered!");
       }
 
@@ -172,17 +174,30 @@ public class RecipientUtil {
     }
 
     SignalDatabase.recipients().setBlocked(recipient.getId(), true);
+    insertBlockedUpdate(recipient, SignalDatabase.threads().getOrCreateThreadIdFor(recipient));
 
+    RecipientUtil.updateProfileSharingAfterBlock(recipient, true);
+
+    AppDependencies.getJobManager().add(new MultiDeviceBlockedUpdateJob());
+    StorageSyncHelper.scheduleSyncForDataChange();
+  }
+
+  @WorkerThread
+  public static boolean updateProfileSharingAfterBlock(@NonNull Recipient recipient, boolean rotateProfileKeyOnBlock) {
     if (recipient.isSystemContact() || recipient.isProfileSharing() || isProfileSharedViaGroup(recipient)) {
       SignalDatabase.recipients().setProfileSharing(recipient.getId(), false);
 
-      ApplicationDependencies.getJobManager().startChain(new RefreshOwnProfileJob())
-                                             .then(new RotateProfileKeyJob())
-                                             .enqueue();
+      if (rotateProfileKeyOnBlock) {
+        Log.i(TAG, "Rotating profile key");
+        AppDependencies.getJobManager().startChain(new RefreshOwnProfileJob())
+                       .then(new RotateProfileKeyJob())
+                       .enqueue();
+
+        return true;
+      }
     }
 
-    ApplicationDependencies.getJobManager().add(new MultiDeviceBlockedUpdateJob());
-    StorageSyncHelper.scheduleSyncForDataChange();
+    return false;
   }
 
   @WorkerThread
@@ -194,8 +209,35 @@ public class RecipientUtil {
 
     SignalDatabase.recipients().setBlocked(recipient.getId(), false);
     SignalDatabase.recipients().setProfileSharing(recipient.getId(), true);
-    ApplicationDependencies.getJobManager().add(new MultiDeviceBlockedUpdateJob());
+    insertUnblockedUpdate(recipient, SignalDatabase.threads().getOrCreateThreadIdFor(recipient));
+    AppDependencies.getJobManager().add(new MultiDeviceBlockedUpdateJob());
     StorageSyncHelper.scheduleSyncForDataChange();
+  }
+
+  private static void insertBlockedUpdate(@NonNull Recipient recipient, long threadId) {
+    try {
+      SignalDatabase.messages().insertMessageOutbox(
+        OutgoingMessage.blockedMessage(recipient, System.currentTimeMillis(), TimeUnit.SECONDS.toMillis(recipient.getExpiresInSeconds())),
+        threadId,
+        false,
+        null
+      );
+    } catch (MmsException e) {
+      Log.w(TAG, "Unable to insert blocked message", e);
+    }
+  }
+
+  private static void insertUnblockedUpdate(@NonNull Recipient recipient, long threadId) {
+    try {
+      SignalDatabase.messages().insertMessageOutbox(
+        OutgoingMessage.unblockedMessage(recipient, System.currentTimeMillis(), TimeUnit.SECONDS.toMillis(recipient.getExpiresInSeconds())),
+        threadId,
+        false,
+        null
+      );
+    } catch (MmsException e) {
+      Log.w(TAG, "Unable to insert unblocked message", e);
+    }
   }
 
   @WorkerThread
@@ -316,7 +358,8 @@ public class RecipientUtil {
       GroupTable groupDatabase = SignalDatabase.groups();
       return groupDatabase.getPushGroupsContainingMember(recipient.getId())
                           .stream()
-                          .anyMatch(GroupRecord::isV2Group);
+                          .filter(GroupRecord::isV2Group)
+                          .anyMatch(group -> group.memberLevel(Recipient.self()).isInGroup());
 
     }
   }
@@ -324,21 +367,23 @@ public class RecipientUtil {
   /**
    * Checks if a universal timer is set and if the thread should have it set on it. Attempts to abort quickly and perform
    * minimal database access.
+   *
+   * @return The new expire timer version if the timer was set, otherwise null.
    */
   @WorkerThread
-  public static boolean setAndSendUniversalExpireTimerIfNecessary(@NonNull Context context, @NonNull Recipient recipient, long threadId) {
+  public static @Nullable Integer setAndSendUniversalExpireTimerIfNecessary(@NonNull Context context, @NonNull Recipient recipient, long threadId) {
     int defaultTimer = SignalStore.settings().getUniversalExpireTimer();
     if (defaultTimer == 0 || recipient.isGroup() || recipient.isDistributionList() || recipient.getExpiresInSeconds() != 0 || !recipient.isRegistered()) {
-      return false;
+      return null;
     }
 
     if (threadId == -1 || SignalDatabase.messages().canSetUniversalTimer(threadId)) {
-      SignalDatabase.recipients().setExpireMessages(recipient.getId(), defaultTimer);
-      OutgoingMessage outgoingMessage = OutgoingMessage.expirationUpdateMessage(recipient, System.currentTimeMillis(), defaultTimer * 1000L);
+      int expireTimerVersion = SignalDatabase.recipients().setExpireMessagesAndIncrementVersion(recipient.getId(), defaultTimer);
+      OutgoingMessage outgoingMessage = OutgoingMessage.expirationUpdateMessage(recipient, System.currentTimeMillis(), defaultTimer * 1000L, expireTimerVersion);
       MessageSender.send(context, outgoingMessage, SignalDatabase.threads().getOrCreateThreadIdFor(recipient), MessageSender.SendType.SIGNAL, null, null);
-      return true;
+      return expireTimerVersion;
     }
-    return false;
+    return null;
   }
 
   @WorkerThread
